--- a/css/tabs.css
+++ b/css/tabs.css
@@ -47,6 +47,6 @@
 .sampleNode img, .sampleLink img{
 	width:100%;
 	height:100%;
-	object-fit:contain;
-	border: 1px solid black;
+	object-fit:contain; 
+	border: 0;
 	}
